# Step3

./: .coverage  .travis.yml  LICENSE.txt  README.md  pyproject.toml  setup.cfg
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0f1a95835f098a78___init___py.html  z_2aa081e2711b3bab___init___py.html  z_2aa081e2711b3bab_character_py.html  z_2aa081e2711b3bab_npc_py.html  z_2aa081e2711b3bab_player_py.html  z_a44f0ac069e85531_test_character_py.html  z_a44f0ac069e85531_test_combat_py.html  z_a44f0ac069e85531_test_events_py.html  z_a44f0ac069e85531_test_interface_py.html  z_a44f0ac069e85531_test_npc_py.html  z_a44f0ac069e85531_test_player_py.html  z_a44f0ac069e85531_test_suite_py.html  z_f5b1a0ef0c31174c___init___py.html  z_f5b1a0ef0c31174c_combat_py.html  z_f5b1a0ef0c31174c_events_py.html  z_f5b1a0ef0c31174c_interface_py.html
src/SimpleBattle/: .coverage  __init__.py  main.py
src/SimpleBattle.egg-info/: PKG-INFO
src/SimpleBattle/Character/: npc.py  player.py
src/SimpleBattle/Gameplay/: __init__.py  combat.py  interface.py
tests/: test_character.py  test_combat.py  test_events.py  test_interface.py  test_npc.py  test_player.py  test_suite.py
