[metadata]
name = SimpleBattle
version = 0.0.1
author = Zefeng Pei, Jiakun Li
author_email = zefengpei@gmail.com, jacob.jiakunli@gmail.com
description = A turn-based RPG battle simulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZefengPei/533project_step3
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    coverage

[options.entry_points]
console_scripts =
    simplebattle = SimpleBattle.main:main

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True
